--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
 
       - name: Upload to S3
         run: |
-          aws s3 sync web s3://pda-portfolio1
+          aws s3 sync web s3://pda-portfolio1/
