--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,6 @@ jobs:
       - name: Upload to S3
         run: |
           aws s3 sync web s3://pda-portfolio1/
+          
+      - name: Invalidate cloudfront
+        run: aws cloudfront create-invalidation --distribution-id E1LFKM58HEIKXU --paths /* # Cloudfront ID로 변경
